bugfix: double scrollbar on page body

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,11 +5,6 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -23,12 +18,10 @@ a {
   width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background-color: rgba(40,45,50,0.3);
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background-color: rgba(100,100,100,0.3);
   border-radius: 20px;
@@ -36,7 +29,6 @@ a {
   background-clip: content-box;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgba(100,100,100,0.6);
   border-radius: 20px;
